<resources>
    <string name="app_name">NagarikNews</string>

    <!-- API KEYS FOR THE SOCIAL NETWORK-->
    <!-- ===============================================================================================-->
    <!-- google project info -->
    <string name="project_id">nagariknews-1469785885211</string>
    <string name="project_no">522116992871</string>
    <string name="project_server_api_key">AIzaSyA0U9R3etV4UQjEIhUVPLYrH3xNywIlhGQ</string>
    <string name="android_api_key"> AIzaSyBqkAtpErU7FbsHB5B55ecL-iqe2KhWDUE</string>
    <string name="gcm_sender_id">522116992871</string>
    <string name="gcm_server_api_key">AIzaSyAJxsbX765adT65EAxuVYVWnvyeFR67MMo</string>

    <!-- facebook api key-->
    <string name="facebook_app_id">1035290163212506</string>
    <string name="hash_key">7MKOH2tg/4pgKCRjpconM6gKTeM=</string>

    <!-- twitter consumer key and consumer secrete key-->
    <string name="twitter_consumer_api_key">hC0cFgSZeGOzbRdJVsn5au52o</string>
    <string name="twitter_consumer_secrete_key">yl76O9K4JRpEr0OwCw6hyymeHVTAFY6fYYH7ADuRr3wVUW5N3q</string>

    <!-- =================================================================================================-->


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_small_font">Decrease font</string>
    <string name="action_large_font">Increase font</string>
    <string name="action_add">Add</string>

    <string name="login_text">Login</string>
    <string name="skip_text">Skip</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="no_account">Don\'t Have account ? Create one</string>
    <string name="back_to_login">Already have account</string>
    <string name="login_facebook_text">Login with Facebook</string>

    <string name="logout_text">Logout</string>
    <string name="poweredby">Powered by :</string>
    <string name="company_name">bidhee Pvt. Ltd.</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!-- news-->
    <string name="news_title_republica">TIA closed due to bomb threat</string>
    <string name="news_description_republica">Andy Rubin, the co-founder of Android before it became a central part of Google,
        is eyeing a return to the smartphone market. Instead of making smartphone software, however, Rubin is reportedly
        interested in developing an Android handset, according to a report today from The Information. The man responsible
        for co-creating the world\'s most ubiquitous mobile operating system is trying to recruit people for the new venture,
        the report adds, but it\'s unclear whether Rubin would take a leadership role with the new project or simply fund it.
        The phone company may be financed through Playground Fund, Rubin\'s startup incubator he founded this year after departing
        from Google last fall. Playground has raised around $300 million thus far, and Rubin has been active in the venture capital
        community since becoming a partner at Redpoint Ventures in April. He\'s put money toward artificial intelligence and smart home
        initiatives, but reportedly still sees the Android phone market as a ripe area for new business.</string>

    <string name="news_title_nagarik">प्रणय दिवस: तन्नेरीको आकर्षण र पाकाको चिन्ता</string>
    <string name="news_description_nagarik"> नेपाल कमर्स क्याम्पस, मीनभवनमा स्नातक प्रथम वर्षकी समीक्षा गौतम प्रणय दिवसले नेपालका युवामा प्रेमलाई नकारात्मक रुपमा दिने बानीको
        विकास गरेको ठान्छिन्। उनले भनिन्,"प्रणय दिवस आफैंमा नराम्रो नभए पनि सहरी युवाले प्रेमलाई फेसनका रुपमा लिई कतिको भविष्य समेत खतरामा पारेका छन् ।
         त्यसैले यसलाई सभ्य रुपमा मनाउन सकेमा मात्र राम्रो हुन्छ ।"विज्ञापन कम्पनीमा कार्यरत दिवस ढकाल भने यो दिवसलाई मायाप्रेम साट्ने दिनको रुपमा लिन्छन्।
        उनले भने, "अहिले समय फेरिएको छ । युवा धेरै सचेत छन् । आफ्नो जीवनको निर्णय आफैं गर्ने भएकाले आफ्नो जीवन साथी रोजी उनैसँग प्रेम दिवस मनाउनु नकारात्मक कुरा होइन।
        प्रणय दिवसको औपचारिक सुरुआत सन् २६९मा रोमबाट सुरु भएको मानिन्छ । रोमका तत्कालीन सम्राट् क्लोडियस द्वितीयले आफ्ना सैनिकलाई प्रेम तथा विवाह गर्न रोक लगाएका थिए।
        सम्राट्को आदेशको उल्लङ्घन गर्दै त्यहाँका पादरी सेन्ट भ्यालेन्टाइनले प्रेमका पक्षमा बोलेपछि धेरै सैनिकको उनले सार्वजनिक रुपमा विवाह गराएका थिए।
        आदेश तोडेको आरोपमा उनलाई इपू ७० को फेब्रुअरी १४ मा मृत्युदण्ड दिइएको थियो। प्रेमका लागि प्राण उत्सर्ग गर्ने उनै पादरीको सम्झनामा भ्यालेन्टाइन डे अर्थात् प्रणय दिवस मनाउन थालिएको हो।
        विश्वभरि नै यस दिनलाई उत्सवका रूपमा मनाउने गरिन्छ। नेपालमा अझै पनि खुला रुपमा प्रेमको कुरा गर्नु विपरीत लिङ्गीसँगै हिँड्नुलाई सकारात्मक रुपमा सहज रुपमा ग्रहण गरिँदैन ।
        सातदोबाटोका ६० वर्षीय बलराम भण्डारीले प्रणय दिवसले नेपालमा धेरै विकृति भित्रिएको बताए। अहिलेका युवाले प्रेमको नाममा धेरै विकृति भित्र्याएको बताउने भण्डारीले प्रेमलाई पनि अहिलेका युवाले खेलौना
        बनाएको विचार व्यक्त गरे। उनले भने, "हाम्रो समयमा अहिलेको जस्तो प्रेम गर्दै छाड्दै गर्ने चलन थिएन । यसरी खुला रुपमा प्रेम गर्ने अनुमति त्यो बेला थिएन तर अहिले त आज एउटासँग प्रेम छ,
        भोलि अर्कोसँग यो विकृति नभए के हो ?" उनले त्यसैले अहिलेका युवाको प्रेमप्रतिको भावना देखेर चिन्ता लाग्ने गरेको सुनाए।
        उनको जस्तै भनाइ छ माछापोखरीकी ५५ वर्षीया भगवती न्यौपानेको पनि । उनले अहिलेका युवाले प्रेमलाई नबुझेको बताइन्।
        उनले भने-"अहिलेका युवा राम्रो देख्नेबित्तिकै मन पराउने र माया गाँस्ने अनि अलिकति खटपट भए मिलाउनुको साटो तुरुन्तै छाडिदिने र अर्कापट्टि लाग्ने फेसन बनेको छ ।
        त्यसैले अहिले सम्बन्धबिच्छेद गर्ने युवाको सङ्ख्या बढ्दो छ ।"
        खासगरी युवाले एकार्काबीच व्यक्त गर्न नसकेको प्रेमलाई व्यक्त गर्ने र प्रेममा भएका जोडीले माया अझ प्रगाढ दिनका रुपमा आजको दिनलाई उपयोग गर्छन् ।
        आजको दिन युवाले आफ्ना प्रेमीप्रेमिकालाई रातो गुलाबको फूल उपहारका रुपमा आदानप्रदान गरेर प्रेम दिवस बनाउने गर्छन् । रासस
    </string>

    <!-- Menu items-->
    <!-- republica-->
    <string name="all_news_r">All News</string>
    <string name="videos_r">Videos</string>
    <string name="photos_r">Photos</string>
    <string name="cartoon_r">Cartoons</string>
    <string name="e_paper_r">e-Paper</string>
    <string name="saved_r">Saved news</string>
    <string name="extra_r">Extra</string>

    <string name="login_r">Login</string>
    <string name="logout_r">Logout</string>
    <string name="settings_r">Settings</string>
    <string name="catlist_r">Change category list</string>


    <!-- nagarik-->
    <string name="all_news_n">सबै समाचार</string>
    <string name="videos_n">भिडियो </string>
    <string name="photos_n">फोटो </string>
    <string name="cartoon_n">कार्टून</string>
    <string name="e_paper_n">ई-पेपर</string>
    <string name="saved_n">सेभ सामाग्री </string>
    <string name="extra_n">अन्य</string>

    <string name="login_n">लग - इन</string>
    <string name="logout_n">लग - आउट</string>
    <string name="settings_n">सेटिङ्स</string>
    <string name="catlist_n">समाचार बिधा बदल्नुहोस </string>

    <!-- Breaking and latest-->
    <string name="breaking_news">BREAKING NEWS</string>
    <string name="latest_news">LATEST NEWS</string>

    <!-- मुख्य समाचार ताजा समाचार -->
    <string name="mukhya_samachar">मुख्य समाचार</string>
    <string name="taja_samachar">ताजा समाचार </string>

    <!-- switched news-->
    <string name="republica">My Republica</string>
    <string name="nagarik">नागरिक</string>
    <string name="sukrabar">शुक्रबार</string>

    <!--epaper option menu-->
    <string name="purbeli">पूर्वेली </string>
    <string name="paschimeli">पश्चिमेली</string>


    <!-- miscellaneous-->
    <string name="sambandhit_news">सम्बन्धित समाचार </string>
    <string name="related_news">Related News</string>
    <string name="preferences_nep">प्रीफेरेन्सेस </string>
    <string name="preferences_eng">Preferences</string>
    <string name="about_nep">हाम्रो बारेमा </string>
    <string name="about_eng">About us</string>

    <string name="bla">
        I really want to see how its like inside black hole
    </string>

    <!-- preference activity data-->
    <string name="preference_checkbox_key">check_box</string>
    <string name="preference_toolbar_title">Settings</string>

    <!-- alert dialog texts-->
    <string name="nagarik_alert_title">नागरिक समाचार</string>
    <string name="myrepublica_alert_title">My Republica</string>
    <string name="sukrabar_alert_title">शुक्रबार समाचार</string>

    <string name="nepali_alert_desc">कृपया तपाइको रुचिअनुसारको समाचार पाउन लग इन गर्नुहोस ।</string>
    <string name="eng_alert_desc">Please login to get your interested news</string>

</resources>
