<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_news"
            android:checked="true"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/all_news_r" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@mipmap/ic_video_library_black_24dp"
            android:title="@string/videos_r" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@mipmap/ic_camera_black_24dp"
            android:title="@string/photos_r" />
        <item
            android:id="@+id/nav_cartoons"
            android:icon="@mipmap/ic_face_black_24dp"
            android:title="@string/cartoon_r" />
        <item
            android:id="@+id/nav_epaper"
            android:icon="@mipmap/ic_apps_black_24dp"
            android:title="@string/e_paper_r" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@mipmap/ic_save_black_24dp"
            android:title="@string/saved_r" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@mipmap/ic_library_add_black_24dp"
            android:title="@string/extra_r" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/settings_r" />
            <item
                android:id="@+id/nav_select_categorylist"
                android:icon="@mipmap/ic_check_box_black_24dp"
                android:title="@string/catlist_r" />
        </menu>
    </item>

</menu>
