<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_news"
            android:checked="true"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/all_news_n" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@mipmap/ic_video_library_black_24dp"
            android:title="@string/videos_n" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@mipmap/ic_camera_black_24dp"
            android:title="@string/photos_n" />

        <item
            android:id="@+id/nav_epaper"
            android:icon="@mipmap/ic_apps_black_24dp"
            android:title="@string/e_paper_n" />
            <!--android:id="@+id/nav_extras"-->
            <!--android:icon="@mipmap/ic_library_add_black_24dp"-->
            <!--android:title="@string/extra_n" />-->
    </group>


</menu>
