<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="99"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/news_font_control_small"
        android:icon="@mipmap/df"
        android:orderInCategory="100"
        android:title="@string/action_small_font"
        app:showAsAction="always" />
    <item
        android:id="@+id/news_font_control_large"
        android:icon="@mipmap/ifont"
        android:orderInCategory="101"
        android:title="@string/action_large_font"
        app:showAsAction="always" />
</menu>
