<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/screen_padding"
    android:background="@drawable/form_background_corner"
    android:orientation="vertical"
    android:padding="@dimen/tab_bar_menu_margin">

    <!-- email layout-->
    <android.support.design.widget.TextInputLayout style="@style/form_cell_parent_layout">

        <AutoCompleteTextView
            android:id="@+id/login_email_field"
            style="@style/auto_edit_text_style"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password" />

    </android.support.design.widget.TextInputLayout>

    <!-- password layout-->
    <android.support.design.widget.TextInputLayout style="@style/form_cell_parent_layout">

        <EditText
            android:id="@+id/login_password_password"
            style="@style/auto_edit_text_style"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/btn_signin" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/form_cell_parent_layout"
        android:visibility="gone">

        <EditText
            android:id="@+id/confirm_password"
            style="@style/auto_edit_text_style"
            android:hint="@string/prompt_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/password" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/button_style"
        android:layout_marginTop="@dimen/screen_padding"
        android:text="@string/login_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_bar_height"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/btnForgot"
            android:visibility="gone"
            style="@style/text_button_style"
            android:text="forgot password" />

        <TextView
            android:id="@+id/btnSkip"
            style="@style/text_button_style"
            android:layout_alignParentRight="true"
            android:text="@string/skip_text" />
    </RelativeLayout>
</LinearLayout>